--- a/layouts/index.html
+++ b/layouts/index.html
@@ -19,7 +19,7 @@
       {{ end }}
 
       <!-- Contact -->
-      {{ partial "contact.html" . }}
+      <!-- {{ partial "contact.html" . }} -->
 
     </main>
     {{ partial "footer.html" . }}
