--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -8,7 +8,7 @@
       <section class="blog" id="blog">
         <div class="container">
           <div class="row center-xs">
-            <div class="col-xs-12"><h1>{{ humanize .Type }}</h1></div>
+            <div class="col-xs-12"><h1>Posts</h1></div>
           </div>
           <div class="row">
             <div class="col-xs-12 posts-list">
